--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -1,11 +1,149 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fVs-Mn-9Id">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Login View Controller-->
+        <scene sceneID="Bab-xm-0N0">
+            <objects>
+                <viewController id="fVs-Mn-9Id" customClass="LoginViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UeG-FG-11R">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EWQ-b8-cZL">
+                                <rect key="frame" x="125" y="420" width="164" height="56"/>
+                                <color key="backgroundColor" red="0.37796012171251503" green="0.64252566558875146" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="164" id="2BN-I8-qxd"/>
+                                    <constraint firstAttribute="height" constant="56" id="UO8-tK-c36"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="onLoginButton:" destination="fVs-Mn-9Id" eventType="touchUpInside" id="0co-Jq-GRk"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="m4n-Mx-3Il"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="EWQ-b8-cZL" firstAttribute="centerX" secondItem="UeG-FG-11R" secondAttribute="centerX" id="0sd-Tk-NA4"/>
+                            <constraint firstItem="EWQ-b8-cZL" firstAttribute="centerY" secondItem="UeG-FG-11R" secondAttribute="centerY" id="Fvc-5g-dx2"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="eBR-jr-cKJ" kind="presentation" identifier="loginToHome" id="aDz-uZ-NgX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SFN-3U-dDi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1204.3478260869565" y="425.89285714285711"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="m6L-6V-e1v">
+            <objects>
+                <tableViewController id="hK1-Oc-WLu" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="l3O-cb-O96">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetsCell" rowHeight="125" id="rZ3-Bg-NL4" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="125"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rZ3-Bg-NL4" id="bv3-Ea-TUg">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="125"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I1l-mq-D8z">
+                                            <rect key="frame" x="20" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="AMA-cI-uyu"/>
+                                                <constraint firstAttribute="height" constant="65" id="VKe-v3-9Jo"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cby-A1-pQK">
+                                            <rect key="frame" x="93" y="11" width="48" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jB5-ox-ztK">
+                                            <rect key="frame" x="93" y="39" width="301" height="75"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="jB5-ox-ztK" firstAttribute="leading" secondItem="I1l-mq-D8z" secondAttribute="trailing" constant="8" id="9Bo-cA-Q14"/>
+                                        <constraint firstItem="jB5-ox-ztK" firstAttribute="trailing" secondItem="bv3-Ea-TUg" secondAttribute="trailingMargin" id="PPT-DS-ndp"/>
+                                        <constraint firstItem="I1l-mq-D8z" firstAttribute="leading" secondItem="bv3-Ea-TUg" secondAttribute="leadingMargin" id="ZJx-or-CAh"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="jB5-ox-ztK" secondAttribute="bottom" id="bKk-s3-ES1"/>
+                                        <constraint firstItem="I1l-mq-D8z" firstAttribute="top" secondItem="bv3-Ea-TUg" secondAttribute="topMargin" id="gjv-TD-td5"/>
+                                        <constraint firstItem="Cby-A1-pQK" firstAttribute="leading" secondItem="I1l-mq-D8z" secondAttribute="trailing" constant="8" id="nEW-w4-bQW"/>
+                                        <constraint firstItem="Cby-A1-pQK" firstAttribute="top" secondItem="bv3-Ea-TUg" secondAttribute="topMargin" id="oiO-bR-Z7r"/>
+                                        <constraint firstItem="jB5-ox-ztK" firstAttribute="top" secondItem="Cby-A1-pQK" secondAttribute="bottom" constant="4" id="pA2-nG-SwF"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="I1l-mq-D8z" id="04w-ge-W6s"/>
+                                    <outlet property="tweetContent" destination="jB5-ox-ztK" id="gQr-dx-RMa"/>
+                                    <outlet property="userNameLabel" destination="Cby-A1-pQK" id="Xm3-Jk-Zel"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hK1-Oc-WLu" id="DIG-xZ-Vrl"/>
+                            <outlet property="delegate" destination="hK1-Oc-WLu" id="XaC-qc-Eu7"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Home" id="Uyz-R7-8fS">
+                        <barButtonItem key="leftBarButtonItem" title="LogOut" id="PnC-0Z-ajr">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onLogout:" destination="hK1-Oc-WLu" id="Yit-bB-oqK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MOl-xd-kn1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="395.6521739130435" y="425.89285714285711"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7GN-Im-bDJ">
+            <objects>
+                <navigationController id="eBR-jr-cKJ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BtH-lj-Mhz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.37796012169999998" green="0.64252566560000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="hK1-Oc-WLu" kind="relationship" relationship="rootViewController" id="w6c-6I-mK3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dJP-UG-tZP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-302" y="426"/>
+        </scene>
+    </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
